tests/type_errors/calling_with_incorrect_args.sy
type A = foreign

def f
: Int -> Int
: a = x ' a

def x
: A -> A
: a = a

--+ expected exit status: 3
--+ expected stderr:
--+ > Failed to merge types.
--+ 
--+ Foreign(Name { name: "A", is_type: true, is_foreign: true, def_at: Span(5, 6), usages: [Span(58, 59), Span(63, 64)] })
--+ ----
--+ Int
--+ 
--+   5 | : a = x ' a
--+                ^
--+ 
